// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme=refresh-toolbar, Size=desktop contract with split panel (trigger is hidden) 1`] = `
Map {
  [Function] => {
    "children": [Function],
    "forwardRef": null,
    "node": undefined,
    "onMount": [Function],
    "props": {
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "contentType": "default",
      "maxContentWidth": undefined,
      "minContentWidth": 280,
      "navigationOpen": true,
      "navigationWidth": 280,
      "onNavigationChange": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "splitPanel": "__JSX__",
      "toolsWidth": 290,
    },
    "stateMounted": true,
  },
  [Function] => {
    "appLayoutProps": {
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "contentType": "default",
      "maxContentWidth": undefined,
      "minContentWidth": 280,
      "navigationOpen": true,
      "navigationWidth": 280,
      "onNavigationChange": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "splitPanel": "__JSX__",
      "toolsWidth": 290,
    },
    "appLayoutState": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawersIds": [],
      "appLayoutInternals": {
        "activeDrawer": undefined,
        "activeDrawerSize": 290,
        "activeGlobalDrawers": [],
        "activeGlobalDrawersIds": [],
        "activeGlobalDrawersSizes": {},
        "ariaLabels": {
          "drawers": undefined,
          "drawersOverflow": undefined,
          "drawersOverflowWithBadge": undefined,
          "navigation": undefined,
          "navigationClose": undefined,
          "navigationToggle": undefined,
          "notifications": undefined,
          "tools": undefined,
          "toolsClose": undefined,
          "toolsToggle": undefined,
        },
        "breadcrumbs": undefined,
        "discoveredBreadcrumbs": null,
        "drawers": [
          {
            "ariaLabels": {
              "closeButton": undefined,
              "drawerName": "",
              "triggerButton": undefined,
            },
            "content": undefined,
            "id": "awsui-internal-tools",
            "resizable": false,
            "trigger": {
              "iconName": "status-info",
            },
          },
        ],
        "drawersFocusControl": {
          "loseFocus": [Function],
          "refs": {
            "close": {
              "current": {
                "focus": [Function],
              },
            },
            "slider": {
              "current": null,
            },
            "toggle": {
              "current": null,
            },
          },
          "setFocus": [Function],
        },
        "drawersOpenQueue": [],
        "globalDrawers": [],
        "globalDrawersFocusControl": {
          "loseFocus": [Function],
          "refs": {},
          "setFocus": [Function],
        },
        "headerVariant": undefined,
        "isMobile": false,
        "maxDrawerSize": Infinity,
        "maxGlobalDrawersSizes": {},
        "minDrawerSize": 290,
        "minGlobalDrawersSizes": {},
        "navigation": "__JSX__",
        "navigationFocusControl": {
          "loseFocus": [Function],
          "refs": {
            "close": {
              "current": {
                "focus": [Function],
              },
            },
            "slider": {
              "current": null,
            },
            "toggle": "__JSX__",
          },
          "setFocus": [Function],
        },
        "navigationOpen": true,
        "onActiveDrawerChange": [Function],
        "onActiveDrawerResize": [Function],
        "onActiveGlobalDrawersChange": [Function],
        "onNavigationToggle": [Function],
        "onSplitPanelToggle": [Function],
        "placement": {
          "inlineSize": Infinity,
          "insetBlockEnd": 0,
          "insetBlockStart": 0,
          "insetInlineEnd": 0,
          "insetInlineStart": 0,
        },
        "setNotificationsHeight": [Function],
        "setToolbarHeight": [Function],
        "setToolbarState": [Function],
        "splitPanelAnimationDisabled": true,
        "splitPanelControlId": "split-panel70",
        "splitPanelFocusControl": {
          "refs": {
            "preferences": {
              "current": null,
            },
            "slider": {
              "current": null,
            },
            "toggle": {
              "current": null,
            },
          },
          "setLastInteraction": [Function],
        },
        "splitPanelOpen": false,
        "splitPanelPosition": "bottom",
        "splitPanelToggleConfig": {
          "ariaLabel": undefined,
          "displayed": false,
        },
        "stickyNotifications": false,
        "toolbarState": "show",
        "verticalOffsets": {
          "drawers": 0,
          "header": 0,
          "notifications": 0,
          "toolbar": 0,
        },
      },
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "hasToolbar": true,
      "intersectionObserverRef": [Function],
      "isIntersecting": true,
      "isMobile": false,
      "isNested": false,
      "navigationAnimationDisabled": true,
      "registered": true,
      "resolvedNavigation": "__JSX__",
      "resolvedNavigationOpen": true,
      "rootRef": "__JSX__",
      "splitPanelInternals": {
        "bottomOffset": 0,
        "getMaxHeight": [Function],
        "headerHeight": 0,
        "isForcedPosition": false,
        "isOpen": false,
        "leftOffset": 0,
        "maxWidth": Infinity,
        "onPreferencesChange": [Function],
        "onResize": [Function],
        "onToggle": [Function],
        "position": "bottom",
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "reportHeaderHeight": [Function],
        "reportSize": [Function],
        "rightOffset": 0,
        "setSplitPanelToggle": [Function],
        "size": 0,
        "topOffset": 0,
      },
      "splitPanelOffsets": {
        "mainContentPaddingBlockEnd": 0,
        "stickyVerticalBottomOffset": 0,
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "toolbarProps": {
        "activeDrawerId": null,
        "ariaLabels": {
          "drawers": undefined,
          "drawersOverflow": undefined,
          "drawersOverflowWithBadge": undefined,
          "navigation": undefined,
          "navigationClose": undefined,
          "navigationToggle": undefined,
          "notifications": undefined,
          "tools": undefined,
          "toolsClose": undefined,
          "toolsToggle": undefined,
        },
        "drawers": [
          {
            "ariaLabels": {
              "closeButton": undefined,
              "drawerName": "",
              "triggerButton": undefined,
            },
            "content": undefined,
            "id": "awsui-internal-tools",
            "resizable": false,
            "trigger": {
              "iconName": "status-info",
            },
          },
        ],
        "drawersFocusRef": {
          "current": null,
        },
        "hasNavigation": true,
        "navigationFocusRef": "__JSX__",
        "navigationOpen": true,
        "onActiveDrawerChange": [Function],
        "onNavigationToggle": [Function],
      },
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "skeletonSlotsAttributes": {
      "contentElAttributes": {
        "className": "awsui_content_7nfqu_jksfw_340 awsui_content_1fj9k_z5zo8_9",
      },
      "contentHeaderElAttributes": {
        "className": "awsui_content-header_7nfqu_jksfw_340",
      },
      "contentWrapperElAttributes": {
        "className": "awsui_main_7nfqu_jksfw_321",
        "style": {
          "--awsui-sticky-vertical-bottom-offset": "0px",
          "--awsui-sticky-vertical-top-offset": "0px",
          "minWidth": "280px",
          "paddingBlockEnd": 0,
        },
      },
      "mainElAttributes": {
        "className": "awsui_main-landmark_7nfqu_jksfw_321",
      },
      "wrapperElAttributes": {
        "className": "awsui_root_7nfqu_jksfw_153 awsui_root_1fj9k_z5zo8_5 awsui_has-adaptive-widths-default_7nfqu_jksfw_197",
        "ref": [Function],
        "style": {
          "--awsui-max-content-width-g964ok": "",
          "--awsui-navigation-width-g964ok": "280px",
          "--awsui-tools-width-g964ok": "290px",
          "minBlockSize": "calc(100vh - 0px)",
        },
      },
    },
  },
  [Function] => {
    "appLayoutProps": {
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "contentType": "default",
      "maxContentWidth": undefined,
      "minContentWidth": 280,
      "navigationOpen": true,
      "navigationWidth": 280,
      "onNavigationChange": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "splitPanel": "__JSX__",
      "toolsWidth": 290,
    },
    "appLayoutState": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawersIds": [],
      "appLayoutInternals": {
        "activeDrawer": undefined,
        "activeDrawerSize": 290,
        "activeGlobalDrawers": [],
        "activeGlobalDrawersIds": [],
        "activeGlobalDrawersSizes": {},
        "ariaLabels": {
          "drawers": undefined,
          "drawersOverflow": undefined,
          "drawersOverflowWithBadge": undefined,
          "navigation": undefined,
          "navigationClose": undefined,
          "navigationToggle": undefined,
          "notifications": undefined,
          "tools": undefined,
          "toolsClose": undefined,
          "toolsToggle": undefined,
        },
        "breadcrumbs": undefined,
        "discoveredBreadcrumbs": null,
        "drawers": [
          {
            "ariaLabels": {
              "closeButton": undefined,
              "drawerName": "",
              "triggerButton": undefined,
            },
            "content": undefined,
            "id": "awsui-internal-tools",
            "resizable": false,
            "trigger": {
              "iconName": "status-info",
            },
          },
        ],
        "drawersFocusControl": {
          "loseFocus": [Function],
          "refs": {
            "close": {
              "current": {
                "focus": [Function],
              },
            },
            "slider": {
              "current": null,
            },
            "toggle": {
              "current": null,
            },
          },
          "setFocus": [Function],
        },
        "drawersOpenQueue": [],
        "globalDrawers": [],
        "globalDrawersFocusControl": {
          "loseFocus": [Function],
          "refs": {},
          "setFocus": [Function],
        },
        "headerVariant": undefined,
        "isMobile": false,
        "maxDrawerSize": Infinity,
        "maxGlobalDrawersSizes": {},
        "minDrawerSize": 290,
        "minGlobalDrawersSizes": {},
        "navigation": "__JSX__",
        "navigationFocusControl": {
          "loseFocus": [Function],
          "refs": {
            "close": {
              "current": {
                "focus": [Function],
              },
            },
            "slider": {
              "current": null,
            },
            "toggle": "__JSX__",
          },
          "setFocus": [Function],
        },
        "navigationOpen": true,
        "onActiveDrawerChange": [Function],
        "onActiveDrawerResize": [Function],
        "onActiveGlobalDrawersChange": [Function],
        "onNavigationToggle": [Function],
        "onSplitPanelToggle": [Function],
        "placement": {
          "inlineSize": Infinity,
          "insetBlockEnd": 0,
          "insetBlockStart": 0,
          "insetInlineEnd": 0,
          "insetInlineStart": 0,
        },
        "setNotificationsHeight": [Function],
        "setToolbarHeight": [Function],
        "setToolbarState": [Function],
        "splitPanelAnimationDisabled": true,
        "splitPanelControlId": "split-panel70",
        "splitPanelFocusControl": {
          "refs": {
            "preferences": {
              "current": null,
            },
            "slider": {
              "current": null,
            },
            "toggle": {
              "current": null,
            },
          },
          "setLastInteraction": [Function],
        },
        "splitPanelOpen": false,
        "splitPanelPosition": "bottom",
        "splitPanelToggleConfig": {
          "ariaLabel": undefined,
          "displayed": false,
        },
        "stickyNotifications": false,
        "toolbarState": "show",
        "verticalOffsets": {
          "drawers": 0,
          "header": 0,
          "notifications": 0,
          "toolbar": 0,
        },
      },
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "hasToolbar": true,
      "intersectionObserverRef": [Function],
      "isIntersecting": true,
      "isMobile": false,
      "isNested": false,
      "navigationAnimationDisabled": true,
      "registered": true,
      "resolvedNavigation": "__JSX__",
      "resolvedNavigationOpen": true,
      "rootRef": "__JSX__",
      "splitPanelInternals": {
        "bottomOffset": 0,
        "getMaxHeight": [Function],
        "headerHeight": 0,
        "isForcedPosition": false,
        "isOpen": false,
        "leftOffset": 0,
        "maxWidth": Infinity,
        "onPreferencesChange": [Function],
        "onResize": [Function],
        "onToggle": [Function],
        "position": "bottom",
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "reportHeaderHeight": [Function],
        "reportSize": [Function],
        "rightOffset": 0,
        "setSplitPanelToggle": [Function],
        "size": 0,
        "topOffset": 0,
      },
      "splitPanelOffsets": {
        "mainContentPaddingBlockEnd": 0,
        "stickyVerticalBottomOffset": 0,
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "toolbarProps": {
        "activeDrawerId": null,
        "ariaLabels": {
          "drawers": undefined,
          "drawersOverflow": undefined,
          "drawersOverflowWithBadge": undefined,
          "navigation": undefined,
          "navigationClose": undefined,
          "navigationToggle": undefined,
          "notifications": undefined,
          "tools": undefined,
          "toolsClose": undefined,
          "toolsToggle": undefined,
        },
        "drawers": [
          {
            "ariaLabels": {
              "closeButton": undefined,
              "drawerName": "",
              "triggerButton": undefined,
            },
            "content": undefined,
            "id": "awsui-internal-tools",
            "resizable": false,
            "trigger": {
              "iconName": "status-info",
            },
          },
        ],
        "drawersFocusRef": {
          "current": null,
        },
        "hasNavigation": true,
        "navigationFocusRef": "__JSX__",
        "navigationOpen": true,
        "onActiveDrawerChange": [Function],
        "onNavigationToggle": [Function],
      },
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "skeletonSlotsAttributes": {
      "contentElAttributes": {
        "className": "awsui_content_7nfqu_jksfw_340 awsui_content_1fj9k_z5zo8_9",
      },
      "contentHeaderElAttributes": {
        "className": "awsui_content-header_7nfqu_jksfw_340",
      },
      "contentWrapperElAttributes": {
        "className": "awsui_main_7nfqu_jksfw_321",
        "style": {
          "--awsui-sticky-vertical-bottom-offset": "0px",
          "--awsui-sticky-vertical-top-offset": "0px",
          "minWidth": "280px",
          "paddingBlockEnd": 0,
        },
      },
      "mainElAttributes": {
        "className": "awsui_main-landmark_7nfqu_jksfw_321",
      },
      "wrapperElAttributes": {
        "className": "awsui_root_7nfqu_jksfw_153 awsui_root_1fj9k_z5zo8_5 awsui_has-adaptive-widths-default_7nfqu_jksfw_197",
        "ref": [Function],
        "style": {
          "--awsui-max-content-width-g964ok": "",
          "--awsui-navigation-width-g964ok": "280px",
          "--awsui-tools-width-g964ok": "290px",
          "minBlockSize": "calc(100vh - 0px)",
        },
      },
    },
  },
  [Function] => {
    "appLayoutProps": {
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "contentType": "default",
      "maxContentWidth": undefined,
      "minContentWidth": 280,
      "navigationOpen": true,
      "navigationWidth": 280,
      "onNavigationChange": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "splitPanel": "__JSX__",
      "toolsWidth": 290,
    },
    "appLayoutState": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawersIds": [],
      "appLayoutInternals": {
        "activeDrawer": undefined,
        "activeDrawerSize": 290,
        "activeGlobalDrawers": [],
        "activeGlobalDrawersIds": [],
        "activeGlobalDrawersSizes": {},
        "ariaLabels": {
          "drawers": undefined,
          "drawersOverflow": undefined,
          "drawersOverflowWithBadge": undefined,
          "navigation": undefined,
          "navigationClose": undefined,
          "navigationToggle": undefined,
          "notifications": undefined,
          "tools": undefined,
          "toolsClose": undefined,
          "toolsToggle": undefined,
        },
        "breadcrumbs": undefined,
        "discoveredBreadcrumbs": null,
        "drawers": [
          {
            "ariaLabels": {
              "closeButton": undefined,
              "drawerName": "",
              "triggerButton": undefined,
            },
            "content": undefined,
            "id": "awsui-internal-tools",
            "resizable": false,
            "trigger": {
              "iconName": "status-info",
            },
          },
        ],
        "drawersFocusControl": {
          "loseFocus": [Function],
          "refs": {
            "close": {
              "current": {
                "focus": [Function],
              },
            },
            "slider": {
              "current": null,
            },
            "toggle": {
              "current": null,
            },
          },
          "setFocus": [Function],
        },
        "drawersOpenQueue": [],
        "globalDrawers": [],
        "globalDrawersFocusControl": {
          "loseFocus": [Function],
          "refs": {},
          "setFocus": [Function],
        },
        "headerVariant": undefined,
        "isMobile": false,
        "maxDrawerSize": Infinity,
        "maxGlobalDrawersSizes": {},
        "minDrawerSize": 290,
        "minGlobalDrawersSizes": {},
        "navigation": "__JSX__",
        "navigationFocusControl": {
          "loseFocus": [Function],
          "refs": {
            "close": {
              "current": {
                "focus": [Function],
              },
            },
            "slider": {
              "current": null,
            },
            "toggle": "__JSX__",
          },
          "setFocus": [Function],
        },
        "navigationOpen": true,
        "onActiveDrawerChange": [Function],
        "onActiveDrawerResize": [Function],
        "onActiveGlobalDrawersChange": [Function],
        "onNavigationToggle": [Function],
        "onSplitPanelToggle": [Function],
        "placement": {
          "inlineSize": Infinity,
          "insetBlockEnd": 0,
          "insetBlockStart": 0,
          "insetInlineEnd": 0,
          "insetInlineStart": 0,
        },
        "setNotificationsHeight": [Function],
        "setToolbarHeight": [Function],
        "setToolbarState": [Function],
        "splitPanelAnimationDisabled": true,
        "splitPanelControlId": "split-panel70",
        "splitPanelFocusControl": {
          "refs": {
            "preferences": {
              "current": null,
            },
            "slider": {
              "current": null,
            },
            "toggle": {
              "current": null,
            },
          },
          "setLastInteraction": [Function],
        },
        "splitPanelOpen": false,
        "splitPanelPosition": "bottom",
        "splitPanelToggleConfig": {
          "ariaLabel": undefined,
          "displayed": false,
        },
        "stickyNotifications": false,
        "toolbarState": "show",
        "verticalOffsets": {
          "drawers": 0,
          "header": 0,
          "notifications": 0,
          "toolbar": 0,
        },
      },
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "hasToolbar": true,
      "intersectionObserverRef": [Function],
      "isIntersecting": true,
      "isMobile": false,
      "isNested": false,
      "navigationAnimationDisabled": true,
      "registered": true,
      "resolvedNavigation": "__JSX__",
      "resolvedNavigationOpen": true,
      "rootRef": "__JSX__",
      "splitPanelInternals": {
        "bottomOffset": 0,
        "getMaxHeight": [Function],
        "headerHeight": 0,
        "isForcedPosition": false,
        "isOpen": false,
        "leftOffset": 0,
        "maxWidth": Infinity,
        "onPreferencesChange": [Function],
        "onResize": [Function],
        "onToggle": [Function],
        "position": "bottom",
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "reportHeaderHeight": [Function],
        "reportSize": [Function],
        "rightOffset": 0,
        "setSplitPanelToggle": [Function],
        "size": 0,
        "topOffset": 0,
      },
      "splitPanelOffsets": {
        "mainContentPaddingBlockEnd": 0,
        "stickyVerticalBottomOffset": 0,
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "toolbarProps": {
        "activeDrawerId": null,
        "ariaLabels": {
          "drawers": undefined,
          "drawersOverflow": undefined,
          "drawersOverflowWithBadge": undefined,
          "navigation": undefined,
          "navigationClose": undefined,
          "navigationToggle": undefined,
          "notifications": undefined,
          "tools": undefined,
          "toolsClose": undefined,
          "toolsToggle": undefined,
        },
        "drawers": [
          {
            "ariaLabels": {
              "closeButton": undefined,
              "drawerName": "",
              "triggerButton": undefined,
            },
            "content": undefined,
            "id": "awsui-internal-tools",
            "resizable": false,
            "trigger": {
              "iconName": "status-info",
            },
          },
        ],
        "drawersFocusRef": {
          "current": null,
        },
        "hasNavigation": true,
        "navigationFocusRef": "__JSX__",
        "navigationOpen": true,
        "onActiveDrawerChange": [Function],
        "onNavigationToggle": [Function],
      },
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "skeletonSlotsAttributes": {
      "contentElAttributes": {
        "className": "awsui_content_7nfqu_jksfw_340 awsui_content_1fj9k_z5zo8_9",
      },
      "contentHeaderElAttributes": {
        "className": "awsui_content-header_7nfqu_jksfw_340",
      },
      "contentWrapperElAttributes": {
        "className": "awsui_main_7nfqu_jksfw_321",
        "style": {
          "--awsui-sticky-vertical-bottom-offset": "0px",
          "--awsui-sticky-vertical-top-offset": "0px",
          "minWidth": "280px",
          "paddingBlockEnd": 0,
        },
      },
      "mainElAttributes": {
        "className": "awsui_main-landmark_7nfqu_jksfw_321",
      },
      "wrapperElAttributes": {
        "className": "awsui_root_7nfqu_jksfw_153 awsui_root_1fj9k_z5zo8_5 awsui_has-adaptive-widths-default_7nfqu_jksfw_197",
        "ref": [Function],
        "style": {
          "--awsui-max-content-width-g964ok": "",
          "--awsui-navigation-width-g964ok": "280px",
          "--awsui-tools-width-g964ok": "290px",
          "minBlockSize": "calc(100vh - 0px)",
        },
      },
    },
  },
  [Function] => {
    "__internalRootRef": {
      "current": null,
    },
    "children": "__JSX__",
    "closeBehavior": "hide",
    "header": "Split panel header",
    "hidePreferencesButton": false,
    "i18nStrings": {
      "closeButtonAriaLabel": undefined,
      "openButtonAriaLabel": undefined,
      "preferencesCancel": undefined,
      "preferencesConfirm": undefined,
      "preferencesPositionBottom": undefined,
      "preferencesPositionDescription": undefined,
      "preferencesPositionLabel": undefined,
      "preferencesPositionSide": undefined,
      "preferencesTitle": undefined,
      "resizeHandleAriaLabel": undefined,
    },
  },
  [Function] => {
    "appLayoutProps": {
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "contentType": "default",
      "maxContentWidth": undefined,
      "minContentWidth": 280,
      "navigationOpen": true,
      "navigationWidth": 280,
      "onNavigationChange": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "splitPanel": "__JSX__",
      "toolsWidth": 290,
    },
    "appLayoutState": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawersIds": [],
      "appLayoutInternals": {
        "activeDrawer": undefined,
        "activeDrawerSize": 290,
        "activeGlobalDrawers": [],
        "activeGlobalDrawersIds": [],
        "activeGlobalDrawersSizes": {},
        "ariaLabels": {
          "drawers": undefined,
          "drawersOverflow": undefined,
          "drawersOverflowWithBadge": undefined,
          "navigation": undefined,
          "navigationClose": undefined,
          "navigationToggle": undefined,
          "notifications": undefined,
          "tools": undefined,
          "toolsClose": undefined,
          "toolsToggle": undefined,
        },
        "breadcrumbs": undefined,
        "discoveredBreadcrumbs": null,
        "drawers": [
          {
            "ariaLabels": {
              "closeButton": undefined,
              "drawerName": "",
              "triggerButton": undefined,
            },
            "content": undefined,
            "id": "awsui-internal-tools",
            "resizable": false,
            "trigger": {
              "iconName": "status-info",
            },
          },
        ],
        "drawersFocusControl": {
          "loseFocus": [Function],
          "refs": {
            "close": {
              "current": {
                "focus": [Function],
              },
            },
            "slider": {
              "current": null,
            },
            "toggle": {
              "current": null,
            },
          },
          "setFocus": [Function],
        },
        "drawersOpenQueue": [],
        "globalDrawers": [],
        "globalDrawersFocusControl": {
          "loseFocus": [Function],
          "refs": {},
          "setFocus": [Function],
        },
        "headerVariant": undefined,
        "isMobile": false,
        "maxDrawerSize": Infinity,
        "maxGlobalDrawersSizes": {},
        "minDrawerSize": 290,
        "minGlobalDrawersSizes": {},
        "navigation": "__JSX__",
        "navigationFocusControl": {
          "loseFocus": [Function],
          "refs": {
            "close": {
              "current": {
                "focus": [Function],
              },
            },
            "slider": {
              "current": null,
            },
            "toggle": "__JSX__",
          },
          "setFocus": [Function],
        },
        "navigationOpen": true,
        "onActiveDrawerChange": [Function],
        "onActiveDrawerResize": [Function],
        "onActiveGlobalDrawersChange": [Function],
        "onNavigationToggle": [Function],
        "onSplitPanelToggle": [Function],
        "placement": {
          "inlineSize": Infinity,
          "insetBlockEnd": 0,
          "insetBlockStart": 0,
          "insetInlineEnd": 0,
          "insetInlineStart": 0,
        },
        "setNotificationsHeight": [Function],
        "setToolbarHeight": [Function],
        "setToolbarState": [Function],
        "splitPanelAnimationDisabled": true,
        "splitPanelControlId": "split-panel70",
        "splitPanelFocusControl": {
          "refs": {
            "preferences": {
              "current": null,
            },
            "slider": {
              "current": null,
            },
            "toggle": {
              "current": null,
            },
          },
          "setLastInteraction": [Function],
        },
        "splitPanelOpen": false,
        "splitPanelPosition": "bottom",
        "splitPanelToggleConfig": {
          "ariaLabel": undefined,
          "displayed": false,
        },
        "stickyNotifications": false,
        "toolbarState": "show",
        "verticalOffsets": {
          "drawers": 0,
          "header": 0,
          "notifications": 0,
          "toolbar": 0,
        },
      },
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "hasToolbar": true,
      "intersectionObserverRef": [Function],
      "isIntersecting": true,
      "isMobile": false,
      "isNested": false,
      "navigationAnimationDisabled": true,
      "registered": true,
      "resolvedNavigation": "__JSX__",
      "resolvedNavigationOpen": true,
      "rootRef": "__JSX__",
      "splitPanelInternals": {
        "bottomOffset": 0,
        "getMaxHeight": [Function],
        "headerHeight": 0,
        "isForcedPosition": false,
        "isOpen": false,
        "leftOffset": 0,
        "maxWidth": Infinity,
        "onPreferencesChange": [Function],
        "onResize": [Function],
        "onToggle": [Function],
        "position": "bottom",
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "reportHeaderHeight": [Function],
        "reportSize": [Function],
        "rightOffset": 0,
        "setSplitPanelToggle": [Function],
        "size": 0,
        "topOffset": 0,
      },
      "splitPanelOffsets": {
        "mainContentPaddingBlockEnd": 0,
        "stickyVerticalBottomOffset": 0,
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "toolbarProps": {
        "activeDrawerId": null,
        "ariaLabels": {
          "drawers": undefined,
          "drawersOverflow": undefined,
          "drawersOverflowWithBadge": undefined,
          "navigation": undefined,
          "navigationClose": undefined,
          "navigationToggle": undefined,
          "notifications": undefined,
          "tools": undefined,
          "toolsClose": undefined,
          "toolsToggle": undefined,
        },
        "drawers": [
          {
            "ariaLabels": {
              "closeButton": undefined,
              "drawerName": "",
              "triggerButton": undefined,
            },
            "content": undefined,
            "id": "awsui-internal-tools",
            "resizable": false,
            "trigger": {
              "iconName": "status-info",
            },
          },
        ],
        "drawersFocusRef": {
          "current": null,
        },
        "hasNavigation": true,
        "navigationFocusRef": "__JSX__",
        "navigationOpen": true,
        "onActiveDrawerChange": [Function],
        "onNavigationToggle": [Function],
      },
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "skeletonSlotsAttributes": {
      "contentElAttributes": {
        "className": "awsui_content_7nfqu_jksfw_340 awsui_content_1fj9k_z5zo8_9",
      },
      "contentHeaderElAttributes": {
        "className": "awsui_content-header_7nfqu_jksfw_340",
      },
      "contentWrapperElAttributes": {
        "className": "awsui_main_7nfqu_jksfw_321",
        "style": {
          "--awsui-sticky-vertical-bottom-offset": "0px",
          "--awsui-sticky-vertical-top-offset": "0px",
          "minWidth": "280px",
          "paddingBlockEnd": 0,
        },
      },
      "mainElAttributes": {
        "className": "awsui_main-landmark_7nfqu_jksfw_321",
      },
      "wrapperElAttributes": {
        "className": "awsui_root_7nfqu_jksfw_153 awsui_root_1fj9k_z5zo8_5 awsui_has-adaptive-widths-default_7nfqu_jksfw_197",
        "ref": [Function],
        "style": {
          "--awsui-max-content-width-g964ok": "",
          "--awsui-navigation-width-g964ok": "280px",
          "--awsui-tools-width-g964ok": "290px",
          "minBlockSize": "calc(100vh - 0px)",
        },
      },
    },
  },
}
`;

exports[`Theme=refresh-toolbar, Size=desktop contract with split panel 1`] = `
Map {
  [Function] => {
    "children": [Function],
    "forwardRef": null,
    "node": undefined,
    "onMount": [Function],
    "props": {
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "contentType": "default",
      "maxContentWidth": undefined,
      "minContentWidth": 280,
      "navigationOpen": true,
      "navigationWidth": 280,
      "onNavigationChange": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "splitPanel": "__JSX__",
      "toolsWidth": 290,
    },
    "stateMounted": true,
  },
  [Function] => {
    "appLayoutProps": {
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "contentType": "default",
      "maxContentWidth": undefined,
      "minContentWidth": 280,
      "navigationOpen": true,
      "navigationWidth": 280,
      "onNavigationChange": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "splitPanel": "__JSX__",
      "toolsWidth": 290,
    },
    "appLayoutState": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawersIds": [],
      "appLayoutInternals": {
        "activeDrawer": undefined,
        "activeDrawerSize": 290,
        "activeGlobalDrawers": [],
        "activeGlobalDrawersIds": [],
        "activeGlobalDrawersSizes": {},
        "ariaLabels": {
          "drawers": undefined,
          "drawersOverflow": undefined,
          "drawersOverflowWithBadge": undefined,
          "navigation": undefined,
          "navigationClose": undefined,
          "navigationToggle": undefined,
          "notifications": undefined,
          "tools": undefined,
          "toolsClose": undefined,
          "toolsToggle": undefined,
        },
        "breadcrumbs": undefined,
        "discoveredBreadcrumbs": null,
        "drawers": [
          {
            "ariaLabels": {
              "closeButton": undefined,
              "drawerName": "",
              "triggerButton": undefined,
            },
            "content": undefined,
            "id": "awsui-internal-tools",
            "resizable": false,
            "trigger": {
              "iconName": "status-info",
            },
          },
        ],
        "drawersFocusControl": {
          "loseFocus": [Function],
          "refs": {
            "close": {
              "current": {
                "focus": [Function],
              },
            },
            "slider": {
              "current": null,
            },
            "toggle": {
              "current": null,
            },
          },
          "setFocus": [Function],
        },
        "drawersOpenQueue": [],
        "globalDrawers": [],
        "globalDrawersFocusControl": {
          "loseFocus": [Function],
          "refs": {},
          "setFocus": [Function],
        },
        "headerVariant": undefined,
        "isMobile": false,
        "maxDrawerSize": Infinity,
        "maxGlobalDrawersSizes": {},
        "minDrawerSize": 290,
        "minGlobalDrawersSizes": {},
        "navigation": "__JSX__",
        "navigationFocusControl": {
          "loseFocus": [Function],
          "refs": {
            "close": {
              "current": {
                "focus": [Function],
              },
            },
            "slider": {
              "current": null,
            },
            "toggle": "__JSX__",
          },
          "setFocus": [Function],
        },
        "navigationOpen": true,
        "onActiveDrawerChange": [Function],
        "onActiveDrawerResize": [Function],
        "onActiveGlobalDrawersChange": [Function],
        "onNavigationToggle": [Function],
        "onSplitPanelToggle": [Function],
        "placement": {
          "inlineSize": Infinity,
          "insetBlockEnd": 0,
          "insetBlockStart": 0,
          "insetInlineEnd": 0,
          "insetInlineStart": 0,
        },
        "setNotificationsHeight": [Function],
        "setToolbarHeight": [Function],
        "setToolbarState": [Function],
        "splitPanelAnimationDisabled": true,
        "splitPanelControlId": "split-panel31",
        "splitPanelFocusControl": {
          "refs": {
            "preferences": {
              "current": null,
            },
            "slider": {
              "current": null,
            },
            "toggle": {
              "current": {
                "focus": [Function],
              },
            },
          },
          "setLastInteraction": [Function],
        },
        "splitPanelOpen": false,
        "splitPanelPosition": "bottom",
        "splitPanelToggleConfig": {
          "ariaLabel": undefined,
          "displayed": true,
        },
        "stickyNotifications": false,
        "toolbarState": "show",
        "verticalOffsets": {
          "drawers": 0,
          "header": 0,
          "notifications": 0,
          "toolbar": 0,
        },
      },
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "hasToolbar": true,
      "intersectionObserverRef": [Function],
      "isIntersecting": true,
      "isMobile": false,
      "isNested": false,
      "navigationAnimationDisabled": true,
      "registered": true,
      "resolvedNavigation": "__JSX__",
      "resolvedNavigationOpen": true,
      "rootRef": "__JSX__",
      "splitPanelInternals": {
        "bottomOffset": 0,
        "getMaxHeight": [Function],
        "headerHeight": 0,
        "isForcedPosition": false,
        "isOpen": false,
        "leftOffset": 0,
        "maxWidth": Infinity,
        "onPreferencesChange": [Function],
        "onResize": [Function],
        "onToggle": [Function],
        "position": "bottom",
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": {
              "focus": [Function],
            },
          },
        },
        "reportHeaderHeight": [Function],
        "reportSize": [Function],
        "rightOffset": 0,
        "setSplitPanelToggle": [Function],
        "size": 0,
        "topOffset": 0,
      },
      "splitPanelOffsets": {
        "mainContentPaddingBlockEnd": 0,
        "stickyVerticalBottomOffset": 0,
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "toolbarProps": {
        "activeDrawerId": null,
        "ariaLabels": {
          "drawers": undefined,
          "drawersOverflow": undefined,
          "drawersOverflowWithBadge": undefined,
          "navigation": undefined,
          "navigationClose": undefined,
          "navigationToggle": undefined,
          "notifications": undefined,
          "tools": undefined,
          "toolsClose": undefined,
          "toolsToggle": undefined,
        },
        "drawers": [
          {
            "ariaLabels": {
              "closeButton": undefined,
              "drawerName": "",
              "triggerButton": undefined,
            },
            "content": undefined,
            "id": "awsui-internal-tools",
            "resizable": false,
            "trigger": {
              "iconName": "status-info",
            },
          },
        ],
        "drawersFocusRef": {
          "current": null,
        },
        "hasNavigation": true,
        "hasSplitPanel": true,
        "navigationFocusRef": "__JSX__",
        "navigationOpen": true,
        "onActiveDrawerChange": [Function],
        "onNavigationToggle": [Function],
        "onSplitPanelToggle": [Function],
        "splitPanelFocusRef": {
          "current": {
            "focus": [Function],
          },
        },
        "splitPanelToggleProps": {
          "active": false,
          "ariaLabel": undefined,
          "controlId": "split-panel31",
          "displayed": true,
          "position": "bottom",
        },
      },
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "skeletonSlotsAttributes": {
      "contentElAttributes": {
        "className": "awsui_content_7nfqu_jksfw_340 awsui_content_1fj9k_z5zo8_9",
      },
      "contentHeaderElAttributes": {
        "className": "awsui_content-header_7nfqu_jksfw_340",
      },
      "contentWrapperElAttributes": {
        "className": "awsui_main_7nfqu_jksfw_321",
        "style": {
          "--awsui-sticky-vertical-bottom-offset": "0px",
          "--awsui-sticky-vertical-top-offset": "0px",
          "minWidth": "280px",
          "paddingBlockEnd": 0,
        },
      },
      "mainElAttributes": {
        "className": "awsui_main-landmark_7nfqu_jksfw_321",
      },
      "wrapperElAttributes": {
        "className": "awsui_root_7nfqu_jksfw_153 awsui_root_1fj9k_z5zo8_5 awsui_has-adaptive-widths-default_7nfqu_jksfw_197",
        "ref": [Function],
        "style": {
          "--awsui-max-content-width-g964ok": "",
          "--awsui-navigation-width-g964ok": "280px",
          "--awsui-tools-width-g964ok": "290px",
          "minBlockSize": "calc(100vh - 0px)",
        },
      },
    },
  },
  [Function] => {
    "appLayoutProps": {
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "contentType": "default",
      "maxContentWidth": undefined,
      "minContentWidth": 280,
      "navigationOpen": true,
      "navigationWidth": 280,
      "onNavigationChange": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "splitPanel": "__JSX__",
      "toolsWidth": 290,
    },
    "appLayoutState": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawersIds": [],
      "appLayoutInternals": {
        "activeDrawer": undefined,
        "activeDrawerSize": 290,
        "activeGlobalDrawers": [],
        "activeGlobalDrawersIds": [],
        "activeGlobalDrawersSizes": {},
        "ariaLabels": {
          "drawers": undefined,
          "drawersOverflow": undefined,
          "drawersOverflowWithBadge": undefined,
          "navigation": undefined,
          "navigationClose": undefined,
          "navigationToggle": undefined,
          "notifications": undefined,
          "tools": undefined,
          "toolsClose": undefined,
          "toolsToggle": undefined,
        },
        "breadcrumbs": undefined,
        "discoveredBreadcrumbs": null,
        "drawers": [
          {
            "ariaLabels": {
              "closeButton": undefined,
              "drawerName": "",
              "triggerButton": undefined,
            },
            "content": undefined,
            "id": "awsui-internal-tools",
            "resizable": false,
            "trigger": {
              "iconName": "status-info",
            },
          },
        ],
        "drawersFocusControl": {
          "loseFocus": [Function],
          "refs": {
            "close": {
              "current": {
                "focus": [Function],
              },
            },
            "slider": {
              "current": null,
            },
            "toggle": {
              "current": null,
            },
          },
          "setFocus": [Function],
        },
        "drawersOpenQueue": [],
        "globalDrawers": [],
        "globalDrawersFocusControl": {
          "loseFocus": [Function],
          "refs": {},
          "setFocus": [Function],
        },
        "headerVariant": undefined,
        "isMobile": false,
        "maxDrawerSize": Infinity,
        "maxGlobalDrawersSizes": {},
        "minDrawerSize": 290,
        "minGlobalDrawersSizes": {},
        "navigation": "__JSX__",
        "navigationFocusControl": {
          "loseFocus": [Function],
          "refs": {
            "close": {
              "current": {
                "focus": [Function],
              },
            },
            "slider": {
              "current": null,
            },
            "toggle": "__JSX__",
          },
          "setFocus": [Function],
        },
        "navigationOpen": true,
        "onActiveDrawerChange": [Function],
        "onActiveDrawerResize": [Function],
        "onActiveGlobalDrawersChange": [Function],
        "onNavigationToggle": [Function],
        "onSplitPanelToggle": [Function],
        "placement": {
          "inlineSize": Infinity,
          "insetBlockEnd": 0,
          "insetBlockStart": 0,
          "insetInlineEnd": 0,
          "insetInlineStart": 0,
        },
        "setNotificationsHeight": [Function],
        "setToolbarHeight": [Function],
        "setToolbarState": [Function],
        "splitPanelAnimationDisabled": true,
        "splitPanelControlId": "split-panel31",
        "splitPanelFocusControl": {
          "refs": {
            "preferences": {
              "current": null,
            },
            "slider": {
              "current": null,
            },
            "toggle": {
              "current": {
                "focus": [Function],
              },
            },
          },
          "setLastInteraction": [Function],
        },
        "splitPanelOpen": false,
        "splitPanelPosition": "bottom",
        "splitPanelToggleConfig": {
          "ariaLabel": undefined,
          "displayed": true,
        },
        "stickyNotifications": false,
        "toolbarState": "show",
        "verticalOffsets": {
          "drawers": 0,
          "header": 0,
          "notifications": 0,
          "toolbar": 0,
        },
      },
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "hasToolbar": true,
      "intersectionObserverRef": [Function],
      "isIntersecting": true,
      "isMobile": false,
      "isNested": false,
      "navigationAnimationDisabled": true,
      "registered": true,
      "resolvedNavigation": "__JSX__",
      "resolvedNavigationOpen": true,
      "rootRef": "__JSX__",
      "splitPanelInternals": {
        "bottomOffset": 0,
        "getMaxHeight": [Function],
        "headerHeight": 0,
        "isForcedPosition": false,
        "isOpen": false,
        "leftOffset": 0,
        "maxWidth": Infinity,
        "onPreferencesChange": [Function],
        "onResize": [Function],
        "onToggle": [Function],
        "position": "bottom",
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": {
              "focus": [Function],
            },
          },
        },
        "reportHeaderHeight": [Function],
        "reportSize": [Function],
        "rightOffset": 0,
        "setSplitPanelToggle": [Function],
        "size": 0,
        "topOffset": 0,
      },
      "splitPanelOffsets": {
        "mainContentPaddingBlockEnd": 0,
        "stickyVerticalBottomOffset": 0,
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "toolbarProps": {
        "activeDrawerId": null,
        "ariaLabels": {
          "drawers": undefined,
          "drawersOverflow": undefined,
          "drawersOverflowWithBadge": undefined,
          "navigation": undefined,
          "navigationClose": undefined,
          "navigationToggle": undefined,
          "notifications": undefined,
          "tools": undefined,
          "toolsClose": undefined,
          "toolsToggle": undefined,
        },
        "drawers": [
          {
            "ariaLabels": {
              "closeButton": undefined,
              "drawerName": "",
              "triggerButton": undefined,
            },
            "content": undefined,
            "id": "awsui-internal-tools",
            "resizable": false,
            "trigger": {
              "iconName": "status-info",
            },
          },
        ],
        "drawersFocusRef": {
          "current": null,
        },
        "hasNavigation": true,
        "hasSplitPanel": true,
        "navigationFocusRef": "__JSX__",
        "navigationOpen": true,
        "onActiveDrawerChange": [Function],
        "onNavigationToggle": [Function],
        "onSplitPanelToggle": [Function],
        "splitPanelFocusRef": {
          "current": {
            "focus": [Function],
          },
        },
        "splitPanelToggleProps": {
          "active": false,
          "ariaLabel": undefined,
          "controlId": "split-panel31",
          "displayed": true,
          "position": "bottom",
        },
      },
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "skeletonSlotsAttributes": {
      "contentElAttributes": {
        "className": "awsui_content_7nfqu_jksfw_340 awsui_content_1fj9k_z5zo8_9",
      },
      "contentHeaderElAttributes": {
        "className": "awsui_content-header_7nfqu_jksfw_340",
      },
      "contentWrapperElAttributes": {
        "className": "awsui_main_7nfqu_jksfw_321",
        "style": {
          "--awsui-sticky-vertical-bottom-offset": "0px",
          "--awsui-sticky-vertical-top-offset": "0px",
          "minWidth": "280px",
          "paddingBlockEnd": 0,
        },
      },
      "mainElAttributes": {
        "className": "awsui_main-landmark_7nfqu_jksfw_321",
      },
      "wrapperElAttributes": {
        "className": "awsui_root_7nfqu_jksfw_153 awsui_root_1fj9k_z5zo8_5 awsui_has-adaptive-widths-default_7nfqu_jksfw_197",
        "ref": [Function],
        "style": {
          "--awsui-max-content-width-g964ok": "",
          "--awsui-navigation-width-g964ok": "280px",
          "--awsui-tools-width-g964ok": "290px",
          "minBlockSize": "calc(100vh - 0px)",
        },
      },
    },
  },
  [Function] => {
    "appLayoutProps": {
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "contentType": "default",
      "maxContentWidth": undefined,
      "minContentWidth": 280,
      "navigationOpen": true,
      "navigationWidth": 280,
      "onNavigationChange": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "splitPanel": "__JSX__",
      "toolsWidth": 290,
    },
    "appLayoutState": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawersIds": [],
      "appLayoutInternals": {
        "activeDrawer": undefined,
        "activeDrawerSize": 290,
        "activeGlobalDrawers": [],
        "activeGlobalDrawersIds": [],
        "activeGlobalDrawersSizes": {},
        "ariaLabels": {
          "drawers": undefined,
          "drawersOverflow": undefined,
          "drawersOverflowWithBadge": undefined,
          "navigation": undefined,
          "navigationClose": undefined,
          "navigationToggle": undefined,
          "notifications": undefined,
          "tools": undefined,
          "toolsClose": undefined,
          "toolsToggle": undefined,
        },
        "breadcrumbs": undefined,
        "discoveredBreadcrumbs": null,
        "drawers": [
          {
            "ariaLabels": {
              "closeButton": undefined,
              "drawerName": "",
              "triggerButton": undefined,
            },
            "content": undefined,
            "id": "awsui-internal-tools",
            "resizable": false,
            "trigger": {
              "iconName": "status-info",
            },
          },
        ],
        "drawersFocusControl": {
          "loseFocus": [Function],
          "refs": {
            "close": {
              "current": {
                "focus": [Function],
              },
            },
            "slider": {
              "current": null,
            },
            "toggle": {
              "current": null,
            },
          },
          "setFocus": [Function],
        },
        "drawersOpenQueue": [],
        "globalDrawers": [],
        "globalDrawersFocusControl": {
          "loseFocus": [Function],
          "refs": {},
          "setFocus": [Function],
        },
        "headerVariant": undefined,
        "isMobile": false,
        "maxDrawerSize": Infinity,
        "maxGlobalDrawersSizes": {},
        "minDrawerSize": 290,
        "minGlobalDrawersSizes": {},
        "navigation": "__JSX__",
        "navigationFocusControl": {
          "loseFocus": [Function],
          "refs": {
            "close": {
              "current": {
                "focus": [Function],
              },
            },
            "slider": {
              "current": null,
            },
            "toggle": "__JSX__",
          },
          "setFocus": [Function],
        },
        "navigationOpen": true,
        "onActiveDrawerChange": [Function],
        "onActiveDrawerResize": [Function],
        "onActiveGlobalDrawersChange": [Function],
        "onNavigationToggle": [Function],
        "onSplitPanelToggle": [Function],
        "placement": {
          "inlineSize": Infinity,
          "insetBlockEnd": 0,
          "insetBlockStart": 0,
          "insetInlineEnd": 0,
          "insetInlineStart": 0,
        },
        "setNotificationsHeight": [Function],
        "setToolbarHeight": [Function],
        "setToolbarState": [Function],
        "splitPanelAnimationDisabled": true,
        "splitPanelControlId": "split-panel31",
        "splitPanelFocusControl": {
          "refs": {
            "preferences": {
              "current": null,
            },
            "slider": {
              "current": null,
            },
            "toggle": {
              "current": {
                "focus": [Function],
              },
            },
          },
          "setLastInteraction": [Function],
        },
        "splitPanelOpen": false,
        "splitPanelPosition": "bottom",
        "splitPanelToggleConfig": {
          "ariaLabel": undefined,
          "displayed": true,
        },
        "stickyNotifications": false,
        "toolbarState": "show",
        "verticalOffsets": {
          "drawers": 0,
          "header": 0,
          "notifications": 0,
          "toolbar": 0,
        },
      },
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "hasToolbar": true,
      "intersectionObserverRef": [Function],
      "isIntersecting": true,
      "isMobile": false,
      "isNested": false,
      "navigationAnimationDisabled": true,
      "registered": true,
      "resolvedNavigation": "__JSX__",
      "resolvedNavigationOpen": true,
      "rootRef": "__JSX__",
      "splitPanelInternals": {
        "bottomOffset": 0,
        "getMaxHeight": [Function],
        "headerHeight": 0,
        "isForcedPosition": false,
        "isOpen": false,
        "leftOffset": 0,
        "maxWidth": Infinity,
        "onPreferencesChange": [Function],
        "onResize": [Function],
        "onToggle": [Function],
        "position": "bottom",
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": {
              "focus": [Function],
            },
          },
        },
        "reportHeaderHeight": [Function],
        "reportSize": [Function],
        "rightOffset": 0,
        "setSplitPanelToggle": [Function],
        "size": 0,
        "topOffset": 0,
      },
      "splitPanelOffsets": {
        "mainContentPaddingBlockEnd": 0,
        "stickyVerticalBottomOffset": 0,
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "toolbarProps": {
        "activeDrawerId": null,
        "ariaLabels": {
          "drawers": undefined,
          "drawersOverflow": undefined,
          "drawersOverflowWithBadge": undefined,
          "navigation": undefined,
          "navigationClose": undefined,
          "navigationToggle": undefined,
          "notifications": undefined,
          "tools": undefined,
          "toolsClose": undefined,
          "toolsToggle": undefined,
        },
        "drawers": [
          {
            "ariaLabels": {
              "closeButton": undefined,
              "drawerName": "",
              "triggerButton": undefined,
            },
            "content": undefined,
            "id": "awsui-internal-tools",
            "resizable": false,
            "trigger": {
              "iconName": "status-info",
            },
          },
        ],
        "drawersFocusRef": {
          "current": null,
        },
        "hasNavigation": true,
        "hasSplitPanel": true,
        "navigationFocusRef": "__JSX__",
        "navigationOpen": true,
        "onActiveDrawerChange": [Function],
        "onNavigationToggle": [Function],
        "onSplitPanelToggle": [Function],
        "splitPanelFocusRef": {
          "current": {
            "focus": [Function],
          },
        },
        "splitPanelToggleProps": {
          "active": false,
          "ariaLabel": undefined,
          "controlId": "split-panel31",
          "displayed": true,
          "position": "bottom",
        },
      },
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "skeletonSlotsAttributes": {
      "contentElAttributes": {
        "className": "awsui_content_7nfqu_jksfw_340 awsui_content_1fj9k_z5zo8_9",
      },
      "contentHeaderElAttributes": {
        "className": "awsui_content-header_7nfqu_jksfw_340",
      },
      "contentWrapperElAttributes": {
        "className": "awsui_main_7nfqu_jksfw_321",
        "style": {
          "--awsui-sticky-vertical-bottom-offset": "0px",
          "--awsui-sticky-vertical-top-offset": "0px",
          "minWidth": "280px",
          "paddingBlockEnd": 0,
        },
      },
      "mainElAttributes": {
        "className": "awsui_main-landmark_7nfqu_jksfw_321",
      },
      "wrapperElAttributes": {
        "className": "awsui_root_7nfqu_jksfw_153 awsui_root_1fj9k_z5zo8_5 awsui_has-adaptive-widths-default_7nfqu_jksfw_197",
        "ref": [Function],
        "style": {
          "--awsui-max-content-width-g964ok": "",
          "--awsui-navigation-width-g964ok": "280px",
          "--awsui-tools-width-g964ok": "290px",
          "minBlockSize": "calc(100vh - 0px)",
        },
      },
    },
  },
  [Function] => {
    "__internalRootRef": {
      "current": null,
    },
    "children": "__JSX__",
    "closeBehavior": "collapse",
    "header": "Split panel header",
    "hidePreferencesButton": false,
    "i18nStrings": {
      "closeButtonAriaLabel": undefined,
      "openButtonAriaLabel": undefined,
      "preferencesCancel": undefined,
      "preferencesConfirm": undefined,
      "preferencesPositionBottom": undefined,
      "preferencesPositionDescription": undefined,
      "preferencesPositionLabel": undefined,
      "preferencesPositionSide": undefined,
      "preferencesTitle": undefined,
      "resizeHandleAriaLabel": undefined,
    },
  },
  [Function] => {
    "appLayoutProps": {
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "contentType": "default",
      "maxContentWidth": undefined,
      "minContentWidth": 280,
      "navigationOpen": true,
      "navigationWidth": 280,
      "onNavigationChange": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "splitPanel": "__JSX__",
      "toolsWidth": 290,
    },
    "appLayoutState": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawersIds": [],
      "appLayoutInternals": {
        "activeDrawer": undefined,
        "activeDrawerSize": 290,
        "activeGlobalDrawers": [],
        "activeGlobalDrawersIds": [],
        "activeGlobalDrawersSizes": {},
        "ariaLabels": {
          "drawers": undefined,
          "drawersOverflow": undefined,
          "drawersOverflowWithBadge": undefined,
          "navigation": undefined,
          "navigationClose": undefined,
          "navigationToggle": undefined,
          "notifications": undefined,
          "tools": undefined,
          "toolsClose": undefined,
          "toolsToggle": undefined,
        },
        "breadcrumbs": undefined,
        "discoveredBreadcrumbs": null,
        "drawers": [
          {
            "ariaLabels": {
              "closeButton": undefined,
              "drawerName": "",
              "triggerButton": undefined,
            },
            "content": undefined,
            "id": "awsui-internal-tools",
            "resizable": false,
            "trigger": {
              "iconName": "status-info",
            },
          },
        ],
        "drawersFocusControl": {
          "loseFocus": [Function],
          "refs": {
            "close": {
              "current": {
                "focus": [Function],
              },
            },
            "slider": {
              "current": null,
            },
            "toggle": {
              "current": null,
            },
          },
          "setFocus": [Function],
        },
        "drawersOpenQueue": [],
        "globalDrawers": [],
        "globalDrawersFocusControl": {
          "loseFocus": [Function],
          "refs": {},
          "setFocus": [Function],
        },
        "headerVariant": undefined,
        "isMobile": false,
        "maxDrawerSize": Infinity,
        "maxGlobalDrawersSizes": {},
        "minDrawerSize": 290,
        "minGlobalDrawersSizes": {},
        "navigation": "__JSX__",
        "navigationFocusControl": {
          "loseFocus": [Function],
          "refs": {
            "close": {
              "current": {
                "focus": [Function],
              },
            },
            "slider": {
              "current": null,
            },
            "toggle": "__JSX__",
          },
          "setFocus": [Function],
        },
        "navigationOpen": true,
        "onActiveDrawerChange": [Function],
        "onActiveDrawerResize": [Function],
        "onActiveGlobalDrawersChange": [Function],
        "onNavigationToggle": [Function],
        "onSplitPanelToggle": [Function],
        "placement": {
          "inlineSize": Infinity,
          "insetBlockEnd": 0,
          "insetBlockStart": 0,
          "insetInlineEnd": 0,
          "insetInlineStart": 0,
        },
        "setNotificationsHeight": [Function],
        "setToolbarHeight": [Function],
        "setToolbarState": [Function],
        "splitPanelAnimationDisabled": true,
        "splitPanelControlId": "split-panel31",
        "splitPanelFocusControl": {
          "refs": {
            "preferences": {
              "current": null,
            },
            "slider": {
              "current": null,
            },
            "toggle": {
              "current": {
                "focus": [Function],
              },
            },
          },
          "setLastInteraction": [Function],
        },
        "splitPanelOpen": false,
        "splitPanelPosition": "bottom",
        "splitPanelToggleConfig": {
          "ariaLabel": undefined,
          "displayed": true,
        },
        "stickyNotifications": false,
        "toolbarState": "show",
        "verticalOffsets": {
          "drawers": 0,
          "header": 0,
          "notifications": 0,
          "toolbar": 0,
        },
      },
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "hasToolbar": true,
      "intersectionObserverRef": [Function],
      "isIntersecting": true,
      "isMobile": false,
      "isNested": false,
      "navigationAnimationDisabled": true,
      "registered": true,
      "resolvedNavigation": "__JSX__",
      "resolvedNavigationOpen": true,
      "rootRef": "__JSX__",
      "splitPanelInternals": {
        "bottomOffset": 0,
        "getMaxHeight": [Function],
        "headerHeight": 0,
        "isForcedPosition": false,
        "isOpen": false,
        "leftOffset": 0,
        "maxWidth": Infinity,
        "onPreferencesChange": [Function],
        "onResize": [Function],
        "onToggle": [Function],
        "position": "bottom",
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": {
              "focus": [Function],
            },
          },
        },
        "reportHeaderHeight": [Function],
        "reportSize": [Function],
        "rightOffset": 0,
        "setSplitPanelToggle": [Function],
        "size": 0,
        "topOffset": 0,
      },
      "splitPanelOffsets": {
        "mainContentPaddingBlockEnd": 0,
        "stickyVerticalBottomOffset": 0,
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "toolbarProps": {
        "activeDrawerId": null,
        "ariaLabels": {
          "drawers": undefined,
          "drawersOverflow": undefined,
          "drawersOverflowWithBadge": undefined,
          "navigation": undefined,
          "navigationClose": undefined,
          "navigationToggle": undefined,
          "notifications": undefined,
          "tools": undefined,
          "toolsClose": undefined,
          "toolsToggle": undefined,
        },
        "drawers": [
          {
            "ariaLabels": {
              "closeButton": undefined,
              "drawerName": "",
              "triggerButton": undefined,
            },
            "content": undefined,
            "id": "awsui-internal-tools",
            "resizable": false,
            "trigger": {
              "iconName": "status-info",
            },
          },
        ],
        "drawersFocusRef": {
          "current": null,
        },
        "hasNavigation": true,
        "hasSplitPanel": true,
        "navigationFocusRef": "__JSX__",
        "navigationOpen": true,
        "onActiveDrawerChange": [Function],
        "onNavigationToggle": [Function],
        "onSplitPanelToggle": [Function],
        "splitPanelFocusRef": {
          "current": {
            "focus": [Function],
          },
        },
        "splitPanelToggleProps": {
          "active": false,
          "ariaLabel": undefined,
          "controlId": "split-panel31",
          "displayed": true,
          "position": "bottom",
        },
      },
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "skeletonSlotsAttributes": {
      "contentElAttributes": {
        "className": "awsui_content_7nfqu_jksfw_340 awsui_content_1fj9k_z5zo8_9",
      },
      "contentHeaderElAttributes": {
        "className": "awsui_content-header_7nfqu_jksfw_340",
      },
      "contentWrapperElAttributes": {
        "className": "awsui_main_7nfqu_jksfw_321",
        "style": {
          "--awsui-sticky-vertical-bottom-offset": "0px",
          "--awsui-sticky-vertical-top-offset": "0px",
          "minWidth": "280px",
          "paddingBlockEnd": 0,
        },
      },
      "mainElAttributes": {
        "className": "awsui_main-landmark_7nfqu_jksfw_321",
      },
      "wrapperElAttributes": {
        "className": "awsui_root_7nfqu_jksfw_153 awsui_root_1fj9k_z5zo8_5 awsui_has-adaptive-widths-default_7nfqu_jksfw_197",
        "ref": [Function],
        "style": {
          "--awsui-max-content-width-g964ok": "",
          "--awsui-navigation-width-g964ok": "280px",
          "--awsui-tools-width-g964ok": "290px",
          "minBlockSize": "calc(100vh - 0px)",
        },
      },
    },
  },
}
`;
